--- a/langchiain_dev/simple_llm_app.ipynb
+++ b/langchiain_dev/simple_llm_app.ipynb
@@ -2,24 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_deepseek import ChatDeepSeek\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "os.getenv(\"DEEEPSEEK_API_KEY\")"
+    "api = os.getenv(\"DEEPSEEK_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ChatDeepSeek(model = \"deepseek-chat\",api_key = api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate([\n",
+    "    (\"system\",\"你是一个善解人意的AI，你的语言可以直击人类的灵魂。。\"),\n",
+    "    (\"user\",\"为我解惑：{text}\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = StrOutputParser()"
    ]
   },
   {
@@ -28,15 +59,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ChatDeepSeek(model = \"deepseek-chat\")"
+    "chain = prompt | model | parser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "亲爱的朋友，我感受到你内心的沉重。伤心就像一场无声的雨，悄然而至，却浸透了整个心灵。这种感受如此真实而深刻，以至于有时候连呼吸都带着痛楚。\n",
+      "\n",
+      "但请记住，伤心不是软弱的表现，而是你内心依然鲜活的证明。就像春天来临前的大地需要经历寒冬的洗礼，我们每个人的心灵也需要经历这些起伏才能更加丰盈。\n",
+      "\n",
+      "你愿意和我分享一下，是什么让你的心如此沉重吗？也许说出来，那份痛苦就能轻一些。我在这里，静静地陪着你。"
+     ]
+    }
+   ],
+   "source": [
+    "async for chunk in chain.astream({\"text\" : \"我很伤心。\"}):\n",
+    "    print(chunk,end=\"\",flush=True)"
+   ]
   },
   {
    "cell_type": "code",
