--- a/langchiain_dev/simple_llm_app.ipynb
+++ b/langchiain_dev/simple_llm_app.ipynb
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = StrOutputParser()"
+    "parser = StrOutputParser() # 解析输出"
    ]
   },
   {
